# frydom

./: .cedarignore  .gitignore  .gitlab-ci.yml  .mailmap  CHANGELOG.md  CMakeLists.txt  load_modules.sh
src/frydom/: CMakeLists.txt  frydom.h  version.h
src/frydom/asset/: CMakeLists.txt  FrAsset.cpp  FrAsset.h  FrAssetOwner.cpp  FrAssetOwner.h  FrCatenaryLineAsset.cpp  FrCatenaryLineAsset.h  FrForceAsset.cpp  FrForceAsset.h  FrFreeSurfaceGridAsset.cpp  FrFreeSurfaceGridAsset.h  FrGridAsset.cpp  FrGridAsset.h  FrNodeAsset.cpp  FrNodeAsset.h  FrSeabedGridAsset.h
src/frydom/asset/shape/: CMakeLists.txt  FrBoxShape.cpp  FrBoxShape.h  FrCylinderShape.cpp  FrCylinderShape.h  FrSphereShape.cpp  FrSphereShape.h  (+2 more)
src/frydom/cable/: CMakeLists.txt  FrCable.cpp  FrCable.h  FrCableBase.cpp  FrCableBase.h  FrCableInc.h  FrCableProperties.cpp  FrCableProperties.h  FrCableShapeInitializer.cpp  FrCableShapeInitializer.h  FrCatenaryLine.cpp  FrCatenaryLine.h  FrCatenaryLineBase.cpp  FrCatenaryLineBase.h  FrCatenaryLineSeabed.cpp  FrCatenaryLineSeabed.h  FrDynamicCable.cpp  FrDynamicCable.h  FrFEACable.cpp  FrFEACable.h  FrFEACableBuilder.h  FrFEACableLoads.cpp  FrFEACableLoads.h  FrHydroFEACableLoads.cpp  FrHydroFEACableLoads.h  FrLumpedMassCable.cpp  FrLumpedMassCable.h
src/frydom/collision/: CMakeLists.txt  FrCollisionModel.cpp  FrCollisionModel.h
src/frydom/core/: CMakeLists.txt  FrCore.h  FrOffshoreSystem.cpp  FrOffshoreSystem.h  FrPlatform.h
src/frydom/environment/: CMakeLists.txt  FrEnvironment.cpp  FrEnvironment.h
src/frydom/hydrodynamics/: CMakeLists.txt  FrEquilibriumFrame.cpp  FrEquilibriumFrame.h
src/frydom/io/: CMakeLists.txt  FrHDF5.cpp  FrHDF5.h  FrIOInc.h  FrLoader.h  JSONNode.cpp  JSONNode.h
src/frydom/logging/: CMakeLists.txt  FrCastor.cpp  FrCastor.h  FrCastorManager.cpp  FrCastorManager.h  FrEventLogger.cpp  FrEventLogger.h  FrLogManager.cpp  FrLogManager.h  FrLoggable.cpp  FrLoggable.h  FrPathManager.h  FrPathPolicies.cpp  FrSerializerFactory.h  FrTypeNames.cpp
src/frydom/mesh/: CMakeLists.txt  FrCache.h  FrHydroMesh.cpp  FrHydroMesh.h  FrIncrementalMeshWriter.h  FrMesh.cpp  FrMesh.h  FrMeshClipper.cpp  FrMeshClipper.h  FrMeshTraits.h  FrPlane.cpp  FrPlane.h  FrPolygon.cpp  FrPolygon.h  FrTriangleMeshConnected.cpp  FrTriangleMeshConnected.h
src/frydom/propulsion/: CMakeLists.txt  FrACMEPropeller.cpp  FrACMEPropeller.h  FrACMEPropellerRudder.cpp  FrACMEPropellerRudder.h  FrACMERudder.cpp  FrACMERudder.h  FrActuatorForceBase.cpp  FrActuatorForceBase.h  FrCPPForce.cpp  FrCPPForce.h  FrFirstQuadrantPropellerForce.cpp  FrFirstQuadrantPropellerForce.h  FrFlapRudderForce.cpp  FrFlapRudderForce.h  FrFourQuadrantPropellerForce.cpp  FrFourQuadrantPropellerForce.h  FrPropeller.cpp  FrPropeller.h  FrPropellerForce.cpp  FrPropellerForce.h  FrPropellerRudder.cpp  FrPropellerRudder.h  FrPropellerType.h  FrPropulsionActuator.cpp  FrPropulsionActuator.h  FrPropulsionForce.cpp  FrPropulsionForce.h  FrPropulsionInc.h  FrRudder.cpp  FrRudder.h  FrRudderForce.cpp  FrRudderForce.h
src/frydom/utils/: CMakeLists.txt  FrConfig.cpp  FrConfig.h  FrFileSystem.cpp  FrIrrApp.cpp  FrIrrApp.h  FrIrrCamera.h  FrRecorder.h  FrSteadyStateChecker.cpp  FrSteadyStateChecker.h  FrUtilsInc.h
tests/: CMakeLists.txt
tests/demos/: CMakeLists.txt  bench_Cables.cpp  bench_DTMB5512.cpp  bench_FEACable_Orcaflex.cpp  bench_FixedJacketStructure.cpp  bench_HS_equilibrium.cpp  bench_NonlinearHydrostaticBox.cpp  bench_Recursive_convolution.cpp  bench_SphereDecay.cpp  bench_SphereIrregular.cpp  bench_SphereRegular.cpp  bench_SpreadMooredFPSO.cpp  bench_StabilityAnalysis.cpp  demo_Ballistic.cpp  demo_Body.cpp  demo_Cable.cpp  demo_Environment.cpp  demo_FOSWEC.cpp  demo_HexagonalArticulatedBuoy.cpp  demo_Hub_Installation.cpp  demo_Hydrodynamic.cpp  demo_Langlee.cpp  demo_MooringLines.cpp  demo_Morison.cpp  demo_Rotation_and_Frame.cpp  demo_Tensegrity.cpp
tests/dev_tests/: CMakeLists.txt  bench_FEACable_FOWT_moored.cpp  bench_FEACable_moored.cpp  demo_IRR_friction.cpp  test_CastorFile.cpp  test_FEACableBuoy.cpp  test_FrCPPForce.cpp  test_FrFlapRudderForce.cpp  test_FrLinks.cpp  test_FrSteadyStateChecker.cpp  test_LM_element.cpp  test_MorisonExtFreeMotion.cpp  test_MorisonExtended.cpp  test_beam_IGA.cpp  test_bspline.cpp  test_catenary_clump_weight.cpp  test_catenary_seabed.cpp  test_chrono_links.cpp  test_chrono_spring_bodies.cpp  test_cylinder_interaction.cpp  test_dynamic_cable_seabed.cpp  test_fea_cable.cpp  test_fea_cable_discretization.cpp  test_fea_mooring_line_with_clump.cpp  test_friction_on_slope.cpp  test_log_hdf5.cpp  test_lumped_mass_cable.cpp  test_pendulum_lumped_mass.cpp  test_propulsion.cpp  test_rdx027.cpp  test_recursive_convolution.cpp  test_vertical_fea_cable_in_waves.cpp
tests/unit_tests/: CMakeLists.txt  test_FrAssembly.cpp  test_FrBody.cpp  test_FrEquilibriumFrame.cpp  test_FrFlowBase.cpp  test_FrFlowForce.cpp  test_FrForce.cpp  test_FrHeightVaryingField.cpp  test_FrITTCResistance.cpp  test_FrInertia.cpp  test_FrKinematicStretching.cpp  test_FrLink.cpp  test_FrMorisonElement.cpp  test_FrNode.cpp  test_FrPropellerForce.cpp  test_FrQuadraticDamping.cpp  test_FrRotation.cpp  test_FrRudderForce.cpp  test_FrShape.cpp  test_FrStandardCurrentForce.cpp  test_FrStandardWindForce.cpp  test_FrUniformField.cpp  test_FrWaveField.cpp  test_FrWaveSpectrum.cpp  test_Torsor.cpp  test_acme_CPP.cpp  test_acme_FPP1Q.cpp  test_acme_FPP4Q.cpp  test_acme_simpleRudder.cpp  test_internal.cpp  test_static_friction.cpp
tests/validation/: CMakeLists.txt  bench_Recursive_convolution.cpp  bench_SphereDecay.cpp  bench_SphereIrregular.cpp
tests/validation/cables/: CMakeLists.txt  bench_Cables.cpp
tests/validations/: CMakeLists.txt  bench_BoxDecayTests.cpp  bench_DTMB5512.cpp  bench_FixedJacketStructure.cpp  bench_MorisonCrossingElement.cpp  bench_MorisonSingleImmersedElement.cpp  bench_SphereDecay.cpp  bench_SphereIrregular.cpp  bench_SphereRegular.cpp  bench_SpreadMooredFPSO.cpp  run_bench_DTMB5512.py
tests/validations/cables/: CMakeLists.txt  bench_Cables.cpp  bench_FEACable_Orcaflex.cpp
(+433 files in other folders)
